argocd-app-of-apps/workloads/bu-1/team-color/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-color
  labels:
    istio-injection: enabled
spec: {}
status: {}
