argocd-app-of-apps/workloads/bu-1/team-color/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: team-nginx
    run: server
  name: server
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: color-server
  type: ClusterIP
